--- a/5-02.md
+++ b/5-02.md
@@ -26,7 +26,7 @@
 Можете использовать симулятор для построения топологии и проверки/поиска ответов на задания. 
 
 ------
-### Задание 1. На картинке изображена схема подключения хаба к свитчу. К хабу одновременно может подключаться не более 3 трех устройств. Если будет обнаружено, что подключено более 3 устройств, то необходимо запретить весь трафик с хаба и отправить уведовления о нарушений. Какая конфигурацию необходимо произвести на свитче?
+### Задание 1. На картинке изображена схема подключения хаба к свитчу. К хабу одновременно может подключаться не более 3 трех устройств. Если будет обнаружено, что подключено более 3 устройств, то необходимо запретить трафик с дополнительных устройств и отправить уведомление о нарушении. Как необходимо настроить порт Fa0/5 на свитче?
 ![image](https://user-images.githubusercontent.com/51816695/155541965-c60aa0fe-ebdb-465f-adcd-9d6bcecd759c.png)
 
 *Отправьте список команд.*
@@ -35,7 +35,7 @@
 - Смотреть логи устройства.
 - Смотреть таблицу MAC адресов.
 - Смотреть таблицу arp.
-- Смотреть полную конфигурацию свитча.
+- Смотреть полную конфигурацию свитча*.
 
 *Отправьте конфигурацию parser view monitoring.*
 
@@ -53,7 +53,7 @@ C. Shutdown
 D. Каждый из режимов, указанных выше, блокирует весь трафик на порту при нарушении политик.
 
 
-### Вопрос 2. Какая из технологий позволяет защитить передачу документов компаний между филиалами по выделенному каналу от перехвата злоумышленника?
+### Вопрос 2. Какая из технологий позволяет защитить передачу документов компаний между филиалами по выделенному каналу от перехвата злоумышленниками?
 A. Port-Security
 
 B. DOT1X
@@ -105,7 +105,7 @@ E. debug ip ospf packet
 
 F. reload
 
-### Вопрос 6. Client получает доступ к сети, указавая логин/пароль своего доменного пользователя. На сервере Active Directory настроен фаерволл, который фильтрует запросы к серверу по ip адресам. Выберите ip адреса, которые необходимо разрешить в фаерволле на Active Directory?
+### Вопрос 6. Client получает доступ к сети, указавая логин/пароль своего доменного пользователя. На сервере Active Directory настроен фаерволл, который фильтрует запросы к серверу по ip адресам. Выберите ip адреса, которые необходимо разрешить в фаерволле на сервере Active Directory?
 
 ![image](https://user-images.githubusercontent.com/51816695/155536997-797a5de0-103d-423f-8018-4163861f604c.png)
 
@@ -117,13 +117,13 @@ C. 192.168.1.30
 
 D. 192.168.1.40
 
-### Вопрос 7. На преприятии необходимо настроить централизованный доступ к сети для всех сотрудников и централизированный доступ на сетевое оборудования с различными ролями для каждого пользователя. Укажите самые оптимальные и  масшатабируемые решения для каждой из задач.
+### Вопрос 7. На предприятии необходимо настроить централизованный доступ к сети для всех сотрудников и централизированный доступ на сетевое оборудования с различными ролями для каждого пользователя. Укажите самые оптимальные и  масшатабируемые решения для каждой из задач.
 
 A. Централизованный доступ к сети - TACACS cервер.
 
 B. Централизованный доступ к сети - Radius cервер.
 
-C. Централизованный доступ к сетеовму оборудованию - TACACS сервер.
+C. Централизованный доступ к сетевому оборудованию - TACACS сервер.
 
 D. Централизованный доступ к сетевому оборудованию - Radius сервер.
 
