--- a/5-02.md
+++ b/5-02.md
@@ -2,11 +2,10 @@
 
 ### Цель задания
 
-Данное домашнее задание позволит научиться конфигурировать Port-Security и RBAC. Позволит понимать какие решения необходимо использовать для различных задач по учучшению информационной безопасности .
+Данное домашнее задание позволит научиться конфигурировать Port-Security и RBAC. Позволит понимать какие решения необходимо использовать для различных задач по учучшению информационной безопасности.
 
-1) Научиться конфигурировать Port-Security.
-2) Научиться настраивать RBAC политики.
-
+1) Научиться конфигурировать Port-Security
+2) Научиться настраивать RBAC политики
 
 ------
 
@@ -23,23 +22,30 @@
 ---
 
 ### Совет
+
 Можете использовать симулятор для построения топологии и проверки/поиска ответов на задания. 
 
 ------
-### Задание 1. На картинке изображена схема подключения хаба к свитчу. К хабу одновременно может подключаться не более 3 трех устройств. Если будет обнаружено, что подключено более 3 устройств, то необходимо запретить трафик с дополнительных устройств и отправить уведомление о нарушении. Как необходимо настроить порт Fa0/5 на свитче?
+### Задание 1. 
+
+На картинке изображена схема подключения хаба к свитчу. К хабу одновременно может подключаться не более 3 трех устройств. Если будет обнаружено, что подключено более 3 устройств, то необходимо запретить трафик с дополнительных устройств и отправить уведомление о нарушении. 
+
+Как необходимо настроить порт Fa0/5 на свитче?
 ![image](https://user-images.githubusercontent.com/51816695/155541965-c60aa0fe-ebdb-465f-adcd-9d6bcecd759c.png)
 
 *Отправьте список команд.*
 
-### Задание 2. Для отдела мониторинга необходимо настроить view monitoring, в котором можно будет делать следующие операции:
-- Смотреть логи устройства.
-- Смотреть таблицу MAC адресов.
-- Смотреть таблицу arp.
-- Смотреть полную конфигурацию свитча*.
+### Задание 2. 
+
+Для отдела мониторинга необходимо настроить view monitoring, в котором можно будет делать следующие операции:
+- Смотреть логи устройства
+- Смотреть таблицу MAC адресов
+- Смотреть таблицу arp
+- Смотреть полную конфигурацию свитча
 
 *Отправьте конфигурацию parser view monitoring.*
 
-
+### Тест
 
 
 ### Вопрос 1. Какой режим в Port-Security, после нарушения политик безопасности Port-Security блокирует любой трафик на порту?
