--- a/5-02.md
+++ b/5-02.md
@@ -30,8 +30,10 @@
 
 На картинке изображена схема подключения хаба к свитчу. К хабу одновременно может подключаться не более 3 трех устройств. Если будет обнаружено, что подключено более 3 устройств, то необходимо запретить трафик с дополнительных устройств и отправить уведомление о нарушении. 
 
-Как необходимо настроить порт Fa0/5 на свитче?
+
 ![image](https://user-images.githubusercontent.com/51816695/155541965-c60aa0fe-ebdb-465f-adcd-9d6bcecd759c.png)
+
+Как необходимо настроить порт Fa0/5 на свитче?
 
 *Отправьте список команд.*
 
@@ -45,93 +47,12 @@
 
 *Отправьте конфигурацию parser view monitoring.*
 
-### Тест
+### Правила приема домашнего задания
 
+В личном кабинете отправлена ссылка на документ (Google Doc) с выполненным заданием. В документе настроены права доступа “Просматривать могут все в Интернете, у кого есть ссылка”.
 
-### Вопрос 1. Какой режим в Port-Security, после нарушения политик безопасности Port-Security блокирует любой трафик на порту?
+### Критерии оценки
 
-A. Protect
+Зачет - выполнены все задания, ответы даны в развернутой форме, приложены соответствующие скриншоты и файлы проекта, в выполненных заданиях нет противоречий и нарушения логики.
 
-B. Restrict
-
-C. Shutdown
-
-D. Каждый из режимов, указанных выше, блокирует весь трафик на порту при нарушении политик.
-
-
-### Вопрос 2. Какая из технологий позволяет защитить передачу документов компаний между филиалами по выделенному каналу от перехвата злоумышленниками?
-A. Port-Security
-
-B. DOT1X
-
-C. MACSec
-
-D. Role-Based Acccess Control
-
-### Вопрос 3. Какая из технологий позволяет защитить коммутаторы от атак на переполнение таблицы коммутации?
-
-A. Port-Security
-
-B. DOT1X
-
-C. MACSec
-
-D. Role-Based Acccess Control
-
-### Вопрос 4. Пользователи из IT департамента должны быть помещены в vlan 10, пользователи из Sales департамента должны быть помещены в vlan 20. Какая технология позволяет делать это динамически?
-
-A. Port-Security
-
-B. DOT1X
-
-C. MACSec
-
-D. Role-Based Acccess Control
-
-### Вопрос 5. Внизу указана конфигурация для view test3, выберите все команды, которые будут разрешены для этого view? 
-*parser view test5*
-
-*commands exec include all ping*
-
-*commands exec exclude configure*
-
-*commands exec include all show*
-
-*commands exec include all debug*
-
-A. conf t
-
-B. ping 8.8.8.8 repeat 100
-
-C. telnet 8.8.8.8 53
-
-D. show ip interface brief
-
-E. debug ip ospf packet
-
-F. reload
-
-### Вопрос 6. Client получает доступ к сети, указавая логин/пароль своего доменного пользователя. На сервере Active Directory настроен фаерволл, который фильтрует запросы к серверу по ip адресам. Выберите ip адреса, которые необходимо разрешить в фаерволле на сервере Active Directory?
-
-![image](https://user-images.githubusercontent.com/51816695/155536997-797a5de0-103d-423f-8018-4163861f604c.png)
-
-A. 192.168.1.10
-
-B. 192.168.1.20
-
-C. 192.168.1.30
-
-D. 192.168.1.40
-
-### Вопрос 7. На предприятии необходимо настроить централизованный доступ к сети для всех сотрудников и централизированный доступ на сетевое оборудования с различными ролями для каждого пользователя. Укажите самые оптимальные и  масшатабируемые решения для каждой из задач.
-
-A. Централизованный доступ к сети - TACACS cервер.
-
-B. Централизованный доступ к сети - Radius cервер.
-
-C. Централизованный доступ к сетевому оборудованию - TACACS сервер.
-
-D. Централизованный доступ к сетевому оборудованию - Radius сервер.
-
-
-
+На доработку - задание выполнено частично или не выполнено, в логике выполнения заданий есть противоречия, существенные недостатки.
