--- a/5-03.md
+++ b/5-03.md
@@ -2,7 +2,7 @@
 
 ### Цель задания
 
-Данное домашнее задание позволит научиться использовать технологии защиты на L2 коммутаторов от популярных атак. Данные очень важны для постороение сетей, например, данные знания очень важны при прохождении сертификации безопасности PCI-DSS, которую проходят банки.
+Данное домашнее задание позволит научиться использовать технологии защиты на L2 коммутаторов от популярных атак. Данные знания очень важны для постороение сетей и прохождения сертификации безопасности PCI-DSS, которую проходят банки.
 
 1) Научиться конфигурировать DHCP Snooping. Понимать принципы работы. 
 2) Научиться защищаться от атак по смене IP адреса при помощи IP Source Guard.
@@ -27,81 +27,33 @@
 Можете использовать симулятор для построения топологии и проверки/поиска ответов на задания. 
 
 ------
+
 ### Задание 1. 
 
 На картинке изображена схема офисной сети:
 ![image](https://user-images.githubusercontent.com/51816695/160147812-5bd15814-762e-4cec-b27e-e8a601f461da.png)
-Каким образом необходимо настроить все 4 свитча, чтоб в сети корректно работал только один DHCP сервер - маршрутизатор R1.
+
+Каким образом необходимо настроить все 4 свитча, чтобы в сети корректно работал только один DHCP сервер - маршрутизатор R1.
 Очень важна корректная конфигурация портов на всех свитчах.
+
 *Отправьте список свитчей и список команд, которые необходимо выполнить.*
+
+------
 
 ### Задание 2. 
 
-По топологии из задания 1, необходимо на SW2 настроить ARP Inspection и IP Source guard для Client9 и Client10, подключенных к SW2.
+По топологии из задания 1 необходимо на SW2 настроить ARP Inspection и IP Source guard для Client9 и Client10, подключенных к SW2.
 Client9 получает адрес по DHCP, Client10 ip адрес задан статически. DHCP Snooping уже настроен по первому заданию.
 
 *Отправьте список команд, которые необходимо применить на SW2*
 
-### Тест
 
+### Правила приема домашнего задания
 
-### Вопрос 1. От каких атак защищает DHCP Snooping. Выберите все правильные ответ.
+В личном кабинете отправлена ссылка на документ (Google Doc) с выполненным заданием. В документе настроены права доступа “Просматривать могут все в Интернете, у кого есть ссылка”.
 
-A. Проникновение на DHCP сервер.
+### Критерии оценки
 
-B. Получение информации об пользователях в сети.
+Зачет - выполнены все задания, ответы даны в развернутой форме, приложены соответствующие скриншоты и файлы проекта, в выполненных заданиях нет противоречий и нарушения логики.
 
-C. Остановка раздачи адресов DHCP сервером
-
-D. Перенаправление пользовательского трафика на некорректный DNS адрес.
-
-
-### Вопрос 2. DHCP Snooping настроен и корректно работает на свитче. Каким образом свитч защищает от атак по протоколу DHCP?
-
-A. Перехватывает DHCP сообщения на ненадежных порт и перенаправляет их сразу на адрес доверенного DHCP сервера.
-
-B. Перехватывает DHCP сообщения на ненадежных порт и отбрасывает, если это сообщения, которые отправляются с DHCP сервера.
-
-C. Перехватывает и отбрасывает все DCHP сообщения.
-
-D. Перехватывает и отбрасывает ответы DHCP сервера на надежных портах. 
-
-### Вопрос 3. Сетевой администратор выдал статический адрес пользователю. Но пользователь хочет скачивать большие файлы и пользоваться торрентом. 
-Для этого пользователь меняет свой адрес, чтоб его не смогли определить. Какая технология может использоваться, чтоб не позволить это делать пользователю?
-
-A. DHCP Snooping
-
-B. ARP Inspection
-
-C. IP Source Guard
-
-D. DOT1X
-
-### Вопрос 4. ARP Inspection защищает от "неправильных" ip адресов. Какие IP адреса неправильные?
-
-A. 229.172.1.2
-
-B. 172.16.1.0
-
-C. 192.168.1.255
-
-D. 127.0.0.1
-
-E. 10.255.255.0
-
-
-### Вопрос 5. Каким образом IP Source Guard проверяет правильность пришедшего на интерфейс свитча пакеты?
-
-A. Заправшивает информацию у DHCP сервера.
-
-B. Проверяет таблицу ARP.
-
-C. Проверяет таблицу маршрутизации.
-
-D. Проверяет таблицу DCHP Snooping.
-
-E. Если настроен ACL на интерфейсе свитча, то определяет по правилам. Если ACL не настроен, то пакет отбрасывается.
-
-
-
-
+На доработку - задание выполнено частично или не выполнено, в логике выполнения заданий есть противоречия, существенные недостатки.
