--- a/5-03.md
+++ b/5-03.md
@@ -36,7 +36,7 @@
 Каким образом необходимо настроить все 4 свитча, чтобы в сети корректно работал только один DHCP сервер - маршрутизатор R1.
 Очень важна корректная конфигурация портов на всех свитчах.
 
-*Отправьте список свитчей и список команд, которые необходимо выполнить.*
+*Перечислите список свитчей и список команд, которые необходимо выполнить.*
 
 ------
 
@@ -45,7 +45,7 @@
 По топологии из задания 1 необходимо на SW2 настроить ARP Inspection и IP Source guard для Client9 и Client10, подключенных к SW2.
 Client9 получает адрес по DHCP, Client10 ip адрес задан статически. DHCP Snooping уже настроен по первому заданию.
 
-*Отправьте список команд, которые необходимо применить на SW2*
+*Перечислите список команд, которые необходимо применить на SW2*
 
 
 ### Правила приема домашнего задания
