--- a/5-04.md
+++ b/5-04.md
@@ -2,9 +2,9 @@
 
 ### Цель задания
 
-Данное домашнее задание 
+Данное домашнее задание ...... тут немного мотивации, почему важно для их профессии уметь делать то, что ты даешь в дз
 
-1) Научиться ....
+1) Научиться .... тут навыки перечислить
 2) Научиться ....
 3) Научиться ....
 
