--- a/5-04.md
+++ b/5-04.md
@@ -2,11 +2,11 @@
 
 ### Цель задания
 
-Данное домашнее задание ...... тут немного мотивации, почему важно для их профессии уметь делать то, что ты даешь в дз
+Данное домашнее задание поможет лучше разобраться в основах технологии NAT, попрактиковаться в её настройке на оборудовании Cisco. Эта технология - одна из основных, используемых при построении современных сетей передачи данных. Каждый сетевой инженер встречается с тем или иным типом сетевых трансляций ежедневно.
 
-1) Научиться .... тут навыки перечислить
-2) Научиться ....
-3) Научиться ....
+1) Научиться выбирать подходящий тип трансляции по запросу пользователя
+2) Научиться ориентироваться в синтаксисе Cisco IOS
+3) Научиться настраивать NAT и проверять корректность настроек маршрутизатора
 
 ------
 
@@ -22,19 +22,43 @@
 
 ---
 
+
+
+Ознакомьтесь со схемой сети. 
+![image](https://user-images.githubusercontent.com/5977962/163477371-1c6c0142-91c6-4133-890d-06125107db9d.png)
+
+Настройки оборудования следующие:
+
+1841 telnet server	
+loopback0	10.10.10.10/32
+Fastethernet0/0	192.168.1.10/24
+
+PC	
+Fastethernet0	182.168.1.11/24
+
+NAT-Router	
+Fastethernet0/0	192.168.1.10/24
+Fastethernet0/1	8.8.8.1/24
+
+Internet-router	
+Fastethernet0/0	8.8.8.8/24
+
+
+Перенесите топологию в PT, настройте оборудование по предложенным данным. Важно! На маршрутизаторе Internet-router для нужной работы сети роутинг настраивать не нужно.
+
+
+---
+
 ### Задание 1. 
-
-
-
-*Что приложить в качестве ответа на задание*
+Нужно настроить PAT overload для всех внутренних хостов LAN через внешний интерфес маршрутизатора NAT-Router. С хостов должен пинговаться 8.8.8.8.
+В кажестве ответа нужно приложить вывод команты "sh run" с маршрутизатора NAT-Router.
 
 ------
 
 ### Задание 2. 
+Обеспечить доступ с Internet-router к telnet-server(10.10.10.10) по протоколу telnet, не настравивая маршрутизация на Internet-router. Доступ из LAN к 8.8.8.8 должен сохраниться.
+В кажестве ответа нужно приложить вывод команты "sh run" с маршрутизатора NAT-Router.
 
-
-
-*Что приложить в качестве ответа на задание*
 
 
 ### Правила приема домашнего задания
