--- a/5-04.md
+++ b/5-04.md
@@ -1,4 +1,4 @@
-# Домашнее задание к занятию "Преобразование сетевых адресов (NAT)."
+# Домашнее задание к занятию "Преобразование сетевых адресов (NAT)"
 
 ### Цель задания
 
@@ -22,44 +22,48 @@
 
 ---
 
-
-
-Ознакомьтесь со схемой сети. 
+Схема сети 
 ![image](https://user-images.githubusercontent.com/5977962/163477371-1c6c0142-91c6-4133-890d-06125107db9d.png)
 
-Настройки оборудования следующие:
+Настройки оборудования:
 
-1841 telnet server	
-loopback0	10.10.10.10/32
-Fastethernet0/0	192.168.1.10/24
+- 1841 telnet server  
+loopback0	10.10.10.10/32  
+Fastethernet0/0	192.168.1.10/24  
 
-PC	
-Fastethernet0	182.168.1.11/24
+- PC  
+Fastethernet0	182.168.1.11/24  
 
-NAT-Router	
-Fastethernet0/0	192.168.1.10/24
-Fastethernet0/1	8.8.8.1/24
+- NAT-Router  
+Fastethernet0/0	192.168.1.10/24  
+Fastethernet0/1	8.8.8.1/24  
 
-Internet-router	
-Fastethernet0/0	8.8.8.8/24
-
-
-Перенесите топологию в PT, настройте оборудование по предложенным данным. Важно! На маршрутизаторе Internet-router для нужной работы сети роутинг настраивать не нужно.
+- Internet-router  
+Fastethernet0/0	8.8.8.8/24  
 
 
----
+Перенесите топологию в PT, настройте оборудование по предложенным данным. 
+#### Важно!  
+На маршрутизаторе Internet-router для нужной работы сети роутинг настраивать не нужно.
+
+
+-----
 
 ### Задание 1. 
-Нужно настроить PAT overload для всех внутренних хостов LAN через внешний интерфес маршрутизатора NAT-Router. С хостов должен пинговаться 8.8.8.8.
-В кажестве ответа нужно приложить вывод команты "sh run" с маршрутизатора NAT-Router.
+
+Настроить PAT overload для всех внутренних хостов LAN через внешний интерфеqс маршрутизатора NAT-Router. С хостов должен пинговаться 8.8.8.8.
+
+*В качестве ответа приложите вывод команды "sh run" с маршрутизатора NAT-Router.*
 
 ------
 
 ### Задание 2. 
-Обеспечить доступ с Internet-router к telnet-server(10.10.10.10) по протоколу telnet, не настравивая маршрутизация на Internet-router. Доступ из LAN к 8.8.8.8 должен сохраниться.
-В кажестве ответа нужно приложить вывод команты "sh run" с маршрутизатора NAT-Router.
 
+Обеспечьте доступ с Internet-router к telnet-server(10.10.10.10) по протоколу telnet, не настраивая маршрутизация на Internet-router. Доступ из LAN к 8.8.8.8 должен сохраниться.
 
+*В качестве ответа приложите вывод команды "sh run" с маршрутизатора NAT-Router.*
+
+------
 
 ### Правила приема домашнего задания
 
