--- a/5-02.md
+++ b/5-02.md
@@ -20,12 +20,10 @@
 7. Любые вопросы по решению задач задавайте в чате учебной группы.
 
 ---
+### Лабораторная работа "Настройка Port-Security"
 
-### Совет
+Рекомендуем использовать симулятор для построения топологии и проверки/поиска ответов на задания. 
 
-Можете использовать симулятор для построения топологии и проверки/поиска ответов на задания. 
-
-------
 ### Задание 1. 
 
 На картинке изображена схема подключения хаба к свитчу. К хабу одновременно может подключаться не более 3 трех устройств. Если будет обнаружено, что подключено более 3 устройств, то необходимо запретить трафик с дополнительных устройств и отправить уведомление о нарушении. 
