--- a/5-05.md
+++ b/5-05.md
@@ -1,9 +1,8 @@
-# Домашнее задание к занятию "Построение виртуальных частных сетей. Протоколы обеспечения защиты передаваемых данных."
+# Домашнее задание к занятию "Построение виртуальных частных сетей. Протоколы обеспечения защиты передаваемых данных"
 
 ### Цель задания
 
-Данное домашнее задание позволит научиться строить ВПН каналы между маршрутизаторами и устанавливать связность между локальными сетями. Также изучим технологию инкапсуляции пакетов.
-
+Данное домашнее задание позволит научиться строить ВПН каналы между маршрутизаторами и устанавливать связность между локальными сетями. А также углубиться в технологию инкапсуляции пакетов.
 
 ------
 
@@ -21,70 +20,72 @@
 
 ### Совет
 
-Можете использовать симулятор для построения топологии и проверки/поиска ответов на задания. 
+Можете использовать симулятор для построения топологии и поиска/проверки ответов на задания. 
 
 ------
 
 ### Задание 1. 
 
-На картинке изображена схема сети, состоящих из трех офисов. Необходимо создать тунели между каждом офисом.
+На картинке изображена схема сети, состоящих из трех офисов.
+![image](https://user-images.githubusercontent.com/51816695/160147812-5bd15814-762e-4cec-b27e-e8a601f461da.png)
+
+Необходимо создать туннели между каждым офисом.
 1) Между R1-R2 создать ВПН канал и обеспечить связность между клиентами маршрутизаторов по зашифрованному каналу со следующими настройками:
 ISAKMP(Ikev1) Phase 1 протоколы:
- шифрование 3des
- хеширование md5
- аутентификация pre-share
- Диффи-Хелманн группа: 2
- время жизни 3600 секунд
- IPSEC Transform-set:
- ESP: esp-3des
- AH: ah-md5-hmac
- Mode: Tunnel
+ - шифрование 3des
+ - хеширование md5
+ - аутентификация pre-share
+ - Диффи-Хелманн группа: 2
+ - время жизни 3600 секунд
+ - IPSEC Transform-set:
+ - ESP: esp-3des
+ - AH: ah-md5-hmac
+ - Mode: Tunnel
  
 2) Между R1-R3 создать ВПН канал и обеспечить связность между клиентами маршрутизаторов по зашифрованному каналу со следующими настройками:
 ISAKMP(Ikev1) Phase 1 протоколы:
- шифрование aes 256
- хеширование sha512
- аутентификация pre-share
- Диффи-Хелманн группа: 5
- время жизни 3600 секунд
+- шифрование aes 256
+- хеширование sha512
+- аутентификация pre-share
+- Диффи-Хелманн группа: 5
+- время жизни 3600 секунд
  
  IPSEC Transform-set:
- ESP: esp-aes 256
- ESP-AH: esp-sha512-hmac
- AH: ah-sha256-hmac
- Mode: Tunnel
+ - ESP: esp-aes 256
+ - ESP-AH: esp-sha512-hmac
+ - AH: ah-sha256-hmac
+ - Mode: Tunnel
 
  3) Между R2-R3 создать ВПН канал и обеспечить связность между клиентами маршрутизаторов по зашифрованному каналу со следующими настройками:
 ISAKMP(Ikev1) Phase 1 протоколы:
- шифрование aes 256
- хеширование sha512
- аутентификация pre-share
- Диффи-Хелманн группа: 5
- время жизни 3600 секунд
+ - шифрование aes 256
+ - хеширование sha512
+ - аутентификация pre-share
+ - Диффи-Хелманн группа: 5
+ - время жизни 3600 секунд
  
  IPSEC Transform-set:
- ESP:  esp-aes 256
- ESP-AH: esp-sha256-hmac
- AH: ah-sha-hmac
- Mode: Tunnel
- 
-![image](https://user-images.githubusercontent.com/51816695/160147812-5bd15814-762e-4cec-b27e-e8a601f461da.png)
+- ESP:  esp-aes 256
+- ESP-AH: esp-sha256-hmac
+- AH: ah-sha-hmac
+- Mode: Tunnel
 
 Каким образом необходимо настроить все 4 свитча, чтобы в сети корректно работал только один DHCP сервер - маршрутизатор R1.
 Очень важна корректная конфигурация портов на всех свитчах.
 
-*Отправьте полный список конфигураций и политик. Требуется, чтоб все три туннеля могли работать одновременно*
+*Отправьте полный список конфигураций и политик. Требуется, чтоб все три туннеля могли работать одновременно.*
 
 ------
 
 ### Задание 2. 
 
-По топологии на картинке построить туннели инкапсуляции между маршрутизаторами.  
-1) Пакеты в инкапсуляции должны использовать адреса Loopback1 интерфейсов в качестве source и destination.
-2) Трафик между клиентами надо инкапсулировать в данные туннели. 
-3)* Зашифровать трафик в данных туннелях.
+По топологии на картинке построить туннели инкапсуляции между маршрутизаторами.
 
-*Требуется отправить список маршрутизаторов со списком команд необходимых для выполнения.*
+1) Пакеты в инкапсуляции должны использовать адреса Loopback1 интерфейсов в качестве source и destination
+2) Трафик между клиентами надо инкапсулировать в данные туннели
+3)* Зашифровать трафик в данных туннелях (это задание со звездочкой, оно не обязательно для получения зачёта).
+
+*Отправьте список маршрутизаторов со списком команд, необходимых для выполнения.*
 
 
 ### Правила приема домашнего задания
