--- a/5-05.md
+++ b/5-05.md
@@ -79,7 +79,7 @@ ISAKMP(Ikev1) Phase 1 протоколы:
 
 ### Задание 2. 
 
-По топологии на картинке построить туннели инкапсуляции между маршрутизаторами.
+По топологии из задания 1 построить туннели инкапсуляции между маршрутизаторами.
 
 1) Пакеты в инкапсуляции должны использовать адреса Loopback1 интерфейсов в качестве source и destination
 2) Трафик между клиентами надо инкапсулировать в данные туннели
