--- a/5-02.md
+++ b/5-02.md
@@ -1,11 +1,13 @@
-# Домашнее задание к занятию "Методы контроля и управления доступом к сети. Port Security, dot1x, MACsec. Ролевая схема доступа."
+# Домашнее задание к занятию "Методы контроля и управления доступом к сети"
 
 ### Цель задания
 
-Данное домашнее задание позволит научиться конфигурировать Port-Security и RBAC. Позволит понимать какие решения необходимо использовать для различных задач по учучшению информационной безопасности.
+Данное домашнее задание научит вас конфигурировать Port-Security и RBAC , а также понимать, какие решения необходимо использовать для различных задач по улучшению информационной безопасности.
 
-1) Научиться конфигурировать Port-Security
-2) Научиться настраивать RBAC политики
+В результате выполнения этого задания вы:
+
+1) Научитесь конфигурировать Port-Security
+2) Научитесь настраивать RBAC политики
 
 ------
 
