--- a/5-05.md
+++ b/5-05.md
@@ -31,18 +31,21 @@
 
 Необходимо создать туннели между каждым офисом.
 1) Между R1-R2 создать ВПН канал и обеспечить связность между клиентами маршрутизаторов по зашифрованному каналу со следующими настройками:
+
 ISAKMP(Ikev1) Phase 1 протоколы:
  - шифрование 3des
  - хеширование md5
  - аутентификация pre-share
  - Диффи-Хелманн группа: 2
  - время жизни 3600 секунд
- - IPSEC Transform-set:
+
+IPSEC Transform-set:
  - ESP: esp-3des
  - AH: ah-md5-hmac
  - Mode: Tunnel
  
 2) Между R1-R3 создать ВПН канал и обеспечить связность между клиентами маршрутизаторов по зашифрованному каналу со следующими настройками:
+
 ISAKMP(Ikev1) Phase 1 протоколы:
 - шифрование aes 256
 - хеширование sha512
@@ -57,6 +60,7 @@ ISAKMP(Ikev1) Phase 1 протоколы:
  - Mode: Tunnel
 
  3) Между R2-R3 создать ВПН канал и обеспечить связность между клиентами маршрутизаторов по зашифрованному каналу со следующими настройками:
+
 ISAKMP(Ikev1) Phase 1 протоколы:
  - шифрование aes 256
  - хеширование sha512
@@ -81,8 +85,8 @@ ISAKMP(Ikev1) Phase 1 протоколы:
 
 По топологии из задания 1 построить туннели инкапсуляции между маршрутизаторами.
 
-1) Пакеты в инкапсуляции должны использовать адреса Loopback1 интерфейсов в качестве source и destination
-2) Трафик между клиентами надо инкапсулировать в данные туннели
+1) Пакеты в инкапсуляции должны использовать адреса Loopback1 интерфейсов в качестве source и destination.
+2) Трафик между клиентами надо инкапсулировать в данные туннели.
 3)* Зашифровать трафик в данных туннелях (это задание со звездочкой, оно не обязательно для получения зачёта).
 
 *Отправьте список маршрутизаторов со списком команд, необходимых для выполнения.*
