--- a/5-05.md
+++ b/5-05.md
@@ -87,7 +87,7 @@ ISAKMP(Ikev1) Phase 1 протоколы:
 
 1) Пакеты в инкапсуляции должны использовать адреса Loopback1 интерфейсов в качестве source и destination.
 2) Трафик между клиентами надо инкапсулировать в данные туннели.
-3)* Зашифровать трафик в данных туннелях (это задание со звездочкой, оно не обязательно для получения зачёта).
+3)** Зашифровать трафик в данных туннелях (это задание со звездочкой, оно не обязательно для получения зачёта).
 
 *Отправьте список маршрутизаторов со списком команд, необходимых для выполнения.*
 
