--- a/5-03.md
+++ b/5-03.md
@@ -4,9 +4,10 @@
 
 Данное домашнее задание позволит научиться использовать технологии защиты на L2 коммутаторов от популярных атак. Данные знания очень важны для постороение сетей и прохождения сертификации безопасности PCI-DSS, которую проходят банки.
 
-1) Научиться конфигурировать DHCP Snooping. Понимать принципы работы. 
-2) Научиться защищаться от атак по смене IP адреса при помощи IP Source Guard.
-3) Научиться защищать протокол ARP от подмены сетевой информации со стороны злоумышленника.
+В результате выполнения задания вы:
+1) Научитесь конфигурировать DHCP Snooping. Понимать принципы работы. 
+2) Научитесь защищаться от атак по смене IP адреса при помощи IP Source Guard.
+3) Научитесь защищать протокол ARP от подмены сетевой информации со стороны злоумышленника.
 
 ------
 
