--- a/5-04.md
+++ b/5-04.md
@@ -4,9 +4,10 @@
 
 Данное домашнее задание поможет лучше разобраться в основах технологии NAT, попрактиковаться в её настройке на оборудовании Cisco. Эта технология - одна из основных, используемых при построении современных сетей передачи данных. Каждый сетевой инженер встречается с тем или иным типом сетевых трансляций ежедневно.
 
-1) Научиться выбирать подходящий тип трансляции по запросу пользователя
-2) Научиться ориентироваться в синтаксисе Cisco IOS
-3) Научиться настраивать NAT и проверять корректность настроек маршрутизатора
+В результате выполнения задания вы:
+1) Научитесь выбирать подходящий тип трансляции по запросу пользователя
+2) Научитесь ориентироваться в синтаксисе Cisco IOS
+3) Научитесь настраивать NAT и проверять корректность настроек маршрутизатора
 
 ------
 
