--- a/5-04.md
+++ b/5-04.md
@@ -52,7 +52,7 @@ Fastethernet0/0	8.8.8.8/24
 
 ### Задание 1. 
 
-Настроить PAT overload для всех внутренних хостов LAN через внешний интерфеqс маршрутизатора NAT-Router. С хостов должен пинговаться 8.8.8.8.
+Настроить PAT overload для всех внутренних хостов LAN через внешний интерфейс маршрутизатора NAT-Router. С хостов должен пинговаться 8.8.8.8.
 
 *В качестве ответа приложите вывод команды "sh run" с маршрутизатора NAT-Router.*
 
@@ -60,7 +60,7 @@ Fastethernet0/0	8.8.8.8/24
 
 ### Задание 2. 
 
-Обеспечьте доступ с Internet-router к telnet-server(10.10.10.10) по протоколу telnet, не настраивая маршрутизация на Internet-router. Доступ из LAN к 8.8.8.8 должен сохраниться.
+Обеспечьте доступ с Internet-router к telnet-server(10.10.10.10) по протоколу telnet, не настраивая маршрутизацию на Internet-router. Доступ из LAN к 8.8.8.8 должен сохраниться.
 
 *В качестве ответа приложите вывод команды "sh run" с маршрутизатора NAT-Router.*
 
