--- a/5-04.md
+++ b/5-04.md
@@ -22,6 +22,7 @@
 7. Любые вопросы по решению задач задавайте в чате учебной группы.
 
 ---
+### Лабораторная работа "Настройка статического NAT и PAT overload"
 
 Схема сети 
 ![image](https://user-images.githubusercontent.com/5977962/163477371-1c6c0142-91c6-4133-890d-06125107db9d.png)
