--- a/5-03.md
+++ b/5-03.md
@@ -23,7 +23,7 @@
 
 ---
 
-### Совет
+### Лабораторная работа "Конфигурация DHCP Snooping и ARP Inspection"
 
 Можете использовать симулятор для построения топологии и проверки/поиска ответов на задания. 
 
