--- a/5-05.md
+++ b/5-05.md
@@ -18,7 +18,7 @@
 
 ---
 
-### Совет
+### Лабораторная работа "Конфигурация IPSeс туннулей и инкапсляции трафика"
 
 Можете использовать симулятор для построения топологии и поиска/проверки ответов на задания. 
 
