--- a/5-06.md
+++ b/5-06.md
@@ -1,1 +1,65 @@
+# Домашнее задание к занятию "Межсетевое экранирование на основе зон, statefull/stateless packet inspection"
 
+### Цель задания
+
+Данное домашнее задание поможет лучше разобраться в основах межсетевого экранирования, глубже понять особенности его работы, попрактиковаться в настройке МСЭ.
+
+В результате выполнения задания вы:
+1) Научитесь выбирать подходящий тип инспекции траффика для эффективного управления траффиком
+2) Научитесь ориентироваться в синтаксисе Cisco ASA OS
+3) Научитесь настраивать statefull и stateless инспекцию, разделять сеть по уровням безопасности
+
+------
+
+### Инструкция к выполнению домашнего задания
+
+1. Сделайте копию [Шаблона для домашнего задания](https://docs.google.com/document/d/1youKpKm_JrC0UzDyUslIZW2E2bIv5OVlm_TQDvH5Pvs/edit) себе на Google Disk.
+2. В названии файла введите корректное название лекции и вашу фамилию и имя.
+3. Зайдите в “Настройки доступа” и выберите доступ “Просматривать могут все в Интернете, у кого есть ссылка”.  Ссылка на инструкцию [Как предоставить доступ к файлам и папкам на Google Диске](https://support.google.com/docs/answer/2494822?hl=ru&co=GENIE.Platform%3DDesktop)
+4. Скопируйте текст задания в свой документ.
+5. Выполните домашнее задание, запишите ответы и приложите необходимые скриншоты в свой Google Doc.
+6. Для проверки домашнего задания преподавателем отправьте ссылку на ваш документ в личном кабинете.
+7. Любые вопросы по решению задач задавайте в чате учебной группы.
+
+---
+### Лабораторная работа "Настройка статического NAT и PAT overload"
+
+Лабораторная работа заключается в настройке МСЭ компании. В ЛВС логически разделена на пользовательскую подсеть, подсеть принтеров и подсеть с сервером DMZ. Для каждой из этих зон расписаны правила доступа в соседние.
+Схема сети 
+![image](https://user-images.githubusercontent.com/5977962/165259469-d27145ff-d9c9-498f-afc3-cd2efd232ae9.png)
+
+Настройки оборудования:
+
+![image](https://user-images.githubusercontent.com/5977962/165261481-c28a6118-00ba-4b7e-853e-f3d7faa6e8f9.png)
+
+Перенесите топологию в PT, настройте оборудование по предложенным данным. 
+
+-----
+
+### Задание 1. 
+
+От службы безопасности были переданы требования для ограничения сетевого доступа между различными подсетями:
+
+1) Разрешить прохождение только ICMP траффика из INSIDE в OUTSIDE, в обратную сторону разрешить ответный траффик
+2) Разрешить прохождение только HTTP-траффика из INSIDE в DMZ, в обратную сторону разрешить ответный траффик
+3) Разрешить прохождение только ICMP-траффика из INSIDE в PRINTER, в обратную сторону разрешить ответный траффик
+4) Из OUTSIDE разрешить инициировать сессии в DMZ по 80 TCP порту, в INSIDE и PRINTER разрешить только ответные пакеты
+5) Из PRINTER запретить инциировать траффик во все остальные зоны
+6) Из DMZ разрешить инициировать траффик в OUTSIDE по ICMP, в INSIDE и PRINTER  разрешить только ответные пакеты
+
+Необходимо, используя полученные знания о межсетевом экранировании на основе зон, statefull и stateless инспекции, сконфигурировать эти правила на МСЭ и выполнить проверку средствами Packet tracer.
+
+
+------
+
+### Правила приема домашнего задания
+
+*В качестве ответа приложите вывод команды "sh run" с МСЭ.*
+
+В личном кабинете отправлена ссылка на документ (Google Doc) с выполненным заданием. В документе настроены права доступа “Просматривать могут все в Интернете, у кого есть ссылка”.
+
+### Критерии оценки
+
+Зачет - выполнены все задания, ответы даны в развернутой форме, приложены соответствующие скриншоты и файлы проекта, в выполненных заданиях нет противоречий и нарушения логики.
+
+На доработку - задание выполнено частично или не выполнено, в логике выполнения заданий есть противоречия, существенные недостатки.
