--- a/5-06.md
+++ b/5-06.md
@@ -24,14 +24,14 @@
 ---
 ### Лабораторная работа "Настройка статического NAT и PAT overload"
 
-Лабораторная работа заключается в настройке МСЭ компании. В ЛВС логически разделена на пользовательскую подсеть, подсеть принтеров и подсеть с сервером DMZ. Для каждой из этих зон расписаны правила доступа в соседние.
+Лабораторная работа заключается в настройке МСЭ компании. ЛВС логически разделена на пользовательскую подсеть, подсеть принтеров и подсеть с сервером DMZ. Для каждой из этих зон расписаны правила доступа в соседние.
 Схема сети 
-![image](https://user-images.githubusercontent.com/5977962/165259469-d27145ff-d9c9-498f-afc3-cd2efd232ae9.png)
+<img width="800" alt="Ping_trouble" src="https://user-images.githubusercontent.com/5977962/165259469-d27145ff-d9c9-498f-afc3-cd2efd232ae9.png">
+
 
 Настройки оборудования:
 
-![image](https://user-images.githubusercontent.com/5977962/165261481-c28a6118-00ba-4b7e-853e-f3d7faa6e8f9.png)
-
+<img width="400" alt="Ping_trouble" src="https://user-images.githubusercontent.com/5977962/165261481-c28a6118-00ba-4b7e-853e-f3d7faa6e8f9.png">
 Перенесите топологию в PT, настройте оборудование по предложенным данным. 
 
 -----
@@ -49,12 +49,11 @@
 
 Необходимо, используя полученные знания о межсетевом экранировании на основе зон, statefull и stateless инспекции, сконфигурировать эти правила на МСЭ и выполнить проверку средствами Packet tracer.
 
+*В качестве ответа приложите вывод команды "sh run" с МСЭ*
 
 ------
 
 ### Правила приема домашнего задания
-
-*В качестве ответа приложите вывод команды "sh run" с МСЭ.*
 
 В личном кабинете отправлена ссылка на документ (Google Doc) с выполненным заданием. В документе настроены права доступа “Просматривать могут все в Интернете, у кого есть ссылка”.
 
