--- a/5-06.md
+++ b/5-06.md
@@ -1,13 +1,13 @@
-# Домашнее задание к занятию "Межсетевое экранирование на основе зон, statefull/stateless packet inspection"
+# Домашнее задание к занятию "Межсетевое экранирование на основе зон, stateful/stateless packet inspection"
 
 ### Цель задания
 
 Данное домашнее задание поможет лучше разобраться в основах межсетевого экранирования, глубже понять особенности его работы, попрактиковаться в настройке МСЭ.
 
 В результате выполнения задания вы:
-1) Научитесь выбирать подходящий тип инспекции траффика для эффективного управления траффиком
+1) Научитесь выбирать подходящий тип инспекции трафика для эффективного управления трафиком
 2) Научитесь ориентироваться в синтаксисе Cisco ASA OS
-3) Научитесь настраивать statefull и stateless инспекцию, разделять сеть по уровням безопасности
+3) Научитесь настраивать stateful и stateless инспекцию, разделять сеть по уровням безопасности
 
 ------
 
@@ -40,14 +40,14 @@
 
 От службы безопасности были переданы требования для ограничения сетевого доступа между различными подсетями:
 
-1) Разрешить прохождение только ICMP траффика из INSIDE в OUTSIDE, в обратную сторону разрешить ответный траффик
-2) Разрешить прохождение только HTTP-траффика из INSIDE в DMZ, в обратную сторону разрешить ответный траффик
-3) Разрешить прохождение только ICMP-траффика из INSIDE в PRINTER, в обратную сторону разрешить ответный траффик
+1) Разрешить прохождение только ICMP трафика из INSIDE в OUTSIDE, в обратную сторону разрешить ответный трафик
+2) Разрешить прохождение только HTTP-трафика из INSIDE в DMZ, в обратную сторону разрешить ответный трафик
+3) Разрешить прохождение только ICMP-трафика из INSIDE в PRINTER, в обратную сторону разрешить ответный трафик
 4) Из OUTSIDE разрешить инициировать сессии в DMZ по 80 TCP порту, в INSIDE и PRINTER разрешить только ответные пакеты
-5) Из PRINTER запретить инциировать траффик во все остальные зоны
-6) Из DMZ разрешить инициировать траффик в OUTSIDE по ICMP, в INSIDE и PRINTER  разрешить только ответные пакеты
+5) Из PRINTER запретить инициировать трафик во все остальные зоны
+6) Из DMZ разрешить инициировать трафик в OUTSIDE по ICMP, в INSIDE и PRINTER  разрешить только ответные пакеты
 
-Необходимо, используя полученные знания о межсетевом экранировании на основе зон, statefull и stateless инспекции, сконфигурировать эти правила на МСЭ и выполнить проверку средствами Packet tracer.
+Необходимо, используя полученные знания о межсетевом экранировании на основе зон, stateful и stateless инспекции, сконфигурировать эти правила на МСЭ и выполнить проверку средствами Packet tracer.
 
 *В качестве ответа приложите вывод команды "sh run" с МСЭ*
 
