--- a/5-04.md
+++ b/5-04.md
@@ -32,12 +32,13 @@
 - 1841 telnet server  
 loopback0	10.10.10.10/32  
 Fastethernet0/0	192.168.1.10/24  
-
+ip route 0.0.0.0 0.0.0.0 192.168.1.1
 - PC  
 Fastethernet0	192.168.1.11/24  
+ip route 0.0.0.0 0.0.0.0 192.168.1.1
 
 - NAT-Router  
-Fastethernet0/0	192.168.1.10/24  
+Fastethernet0/0	192.168.1.1/24  
 Fastethernet0/1	8.8.8.1/24  
 
 - Internet-router  
