--- a/5-06.md
+++ b/5-06.md
@@ -36,7 +36,7 @@
 
 -----
 
-### Задание 1. 
+### Задание 
 
 От службы безопасности были переданы требования для ограничения сетевого доступа между различными подсетями:
 
