--- a/5-07.md
+++ b/5-07.md
@@ -2,12 +2,12 @@
 
 ### Цель задания
 
-Данное домашнее задание поможет... 
+Данное домашнее задание поможет в понимание процессов разграничения трафика по признакм протоколов и инспектирования пакетов.
 
 В результате выполнения задания вы:
-1) Научитесь... 
-2) Научитесь... 
-3) Научитесь... 
+1) Научитесь настраивать расширенный ACL
+2) Научитесь разграничивать трафик для различных сетей назначения
+3) Научитесь настраивать инспектирвоания по протоколам
 
 ------
 
@@ -23,9 +23,9 @@
 
 ---
 
-### Лабораторная работа 1 "..."
+### Лабораторная работа 1 "Настрйока расширенных листов контроля доступа"
 
-Лабораторная работа заключается в... 
+Лабораторная работа заключается в настройке сервисов и межсетевого экрнаирования для разграничения таргетированного трафика между сетями. 
 
 1. Собрать сеть предложенную на схеме.
 <img width="800" alt="Ping_trouble" src="https://user-images.githubusercontent.com/85602495/168012223-cf10088b-3e83-4c9a-b92d-21e704f84463.png">
@@ -39,9 +39,9 @@
 
 ---
 
-### Лабораторная работа 2 "..."
+### Лабораторная работа 2 "Настрйока инспектирования трафика"
 
-Лабораторная работа заключается в... 
+Лабораторная работа заключается в настрйоки правил испектирвоания сетевого трафика на прикладном уровне 
 
 Настроить политику инспектирования по листам доступа для предложенных сетей из лабораторной работы № 1. 
 
