--- a/5-06.md
+++ b/5-06.md
@@ -31,7 +31,8 @@
 
 Настройки оборудования:
 
-<img width="400" alt="Ping_trouble" src="https://user-images.githubusercontent.com/5977962/165261481-c28a6118-00ba-4b7e-853e-f3d7faa6e8f9.png">
+![image](https://user-images.githubusercontent.com/5977962/168151648-384e2440-1546-40f2-9f18-293d16acbb5b.png)
+
 Перенесите топологию в PT, настройте оборудование по предложенным данным. 
 
 -----
